--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react": "18.3.1",
     "react-native": "0.76.7",
     "react-native-gesture-handler": "^2.24.0",
-    "react-native-screens": "^4.9.1"
+    "react-native-screens": "^4.9.1",
+    "undefined": "expo-splash-screen\\"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
