--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-native": "0.76.7",
+    "react-native-draggable-flatlist": "^4.0.1",
     "react-native-gesture-handler": "^2.24.0",
     "react-native-paper": "^5.13.1",
+    "react-native-reanimated": "^2.14.4",
     "react-native-screens": "^4.9.1",
     "undefined": "expo-splash-screen\\"
   },
