--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-native-paper": "^5.13.1",
     "react-native-reanimated": "^2.14.4",
     "react-native-screens": "^4.9.1",
-    "undefined": "expo-splash-screen\\"
+    "undefined": "expo-splash-screen\\",
+    "expo-blur": "~14.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
