--- a/app.json
+++ b/app.json
@@ -18,8 +18,13 @@
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
-      }
+        "backgroundColor": "#ffffff",
+        "package": "com.yourcompany.yourapp",
+        "versionCode": 1
+      },
+      "permissions": [
+        "android.permission.CAMERA"
+      ]
     },
     "web": {
       "favicon": "./assets/favicon.png"
@@ -27,6 +32,11 @@
     "plugins": [
       "expo-barcode-scanner",
       "expo-splash-screen\\"
-    ]
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "3aec5971-75b3-4df4-8596-0d8edf57b3c9"
+      }
+    }
   }
 }
