--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo": "~52.0.37",
     "expo-av": "~15.0.2",
     "expo-barcode-scanner": "^13.0.1",
+    "expo-blur": "~14.0.3",
     "expo-camera": "~16.0.17",
     "expo-font": "^13.0.4",
     "expo-linear-gradient": "~14.0.2",
@@ -32,8 +33,7 @@
     "react-native-paper": "^5.13.1",
     "react-native-reanimated": "^2.14.4",
     "react-native-screens": "^4.9.1",
-    "undefined": "expo-splash-screen\\",
-    "expo-blur": "~14.0.3"
+    "undefined": "expo-splash-screen\\"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
