--- a/package.json
+++ b/package.json
@@ -31,9 +31,8 @@
     "react-native-draggable-flatlist": "^4.0.1",
     "react-native-gesture-handler": "^2.24.0",
     "react-native-paper": "^5.13.1",
-    "react-native-reanimated": "^2.14.4",
-    "react-native-screens": "^4.9.1",
-    "undefined": "expo-splash-screen\\"
+    "react-native-reanimated": "^3.17.1",
+    "react-native-screens": "^4.9.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
