--- a/package.json
+++ b/package.json
@@ -11,16 +11,18 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.1.2",
-    "@react-native-picker/picker": "^2.11.0",
+    "@react-native-picker/picker": "2.9.0",
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/native-stack": "^7.2.1",
     "@react-navigation/stack": "^7.1.2",
-    "@types/react-native": "^0.72.8",
-    "expo": "~52.0.37",
+    "axios": "^1.8.4",
+    "expo": "^52.0.39",
     "expo-av": "~15.0.2",
     "expo-barcode-scanner": "^13.0.1",
     "expo-blur": "~14.0.3",
-    "expo-camera": "~16.0.17",
+    "expo-build-properties": "~0.13.2",
+    "expo-camera": "~16.0.18",
+    "expo-dev-client": "~5.0.14",
     "expo-font": "^13.0.4",
     "expo-linear-gradient": "~14.0.2",
     "expo-splash-screen": "^0.29.22",
@@ -29,13 +31,16 @@
     "react": "18.3.1",
     "react-native": "0.76.7",
     "react-native-draggable-flatlist": "^4.0.1",
-    "react-native-gesture-handler": "^2.24.0",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-paper": "^5.13.1",
-    "react-native-reanimated": "^3.17.1",
-    "react-native-screens": "^4.9.1"
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "^5.3.0",
+    "react-native-screens": "~4.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@expo/metro-config": "^0.19.12",
+    "@types/lodash": "^4.17.16",
     "@types/react": "~18.3.12",
     "typescript": "^5.8.2"
   },
