--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "expo-linear-gradient": "~14.0.2",
     "expo-splash-screen": "^0.29.22",
     "expo-status-bar": "~2.0.1",
+    "formik": "^2.4.6",
     "moti": "^0.30.0",
     "react": "18.3.1",
     "react-native": "0.76.7",
@@ -35,7 +36,8 @@
     "react-native-paper": "^5.13.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "^5.3.0",
-    "react-native-screens": "~4.4.0"
+    "react-native-screens": "~4.4.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
