--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "آراتایل",
+    "name": "Aratile",
     "slug": "aratile",
     "version": "1.0.0",
     "orientation": "portrait",
