--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "moti": "^0.30.0",
     "react": "18.3.1",
     "react-native": "0.76.7",
+    "react-native-animatable": "^1.4.0",
     "react-native-draggable-flatlist": "^4.0.1",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-paper": "^5.13.1",
