--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native-animatable": "^1.4.0",
     "react-native-draggable-flatlist": "^4.0.1",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-maps": "^1.22.6",
     "react-native-paper": "^5.13.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "^5.3.0",
