--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "aratile",
-  "license": "0BSD",
   "version": "1.0.0",
+  "license": "0BSD",
   "main": "index.ts",
+  "private": true,
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -10,43 +11,45 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^2.1.2",
-    "@react-native-picker/picker": "2.9.0",
+    "expo": "~53.0.0",
+    "react": "19.0.0",
+    "react-native": "0.79.2",
+    "@react-native-async-storage/async-storage": "~2.1.1",
+    "@react-native-picker/picker": "2.11.0",
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/native-stack": "^7.2.1",
     "@react-navigation/stack": "^7.1.2",
     "axios": "^1.8.4",
-    "expo": "^52.0.39",
-    "expo-av": "~15.0.2",
+    "expo-av": "~15.1.4",
     "expo-barcode-scanner": "^13.0.1",
-    "expo-blur": "~14.0.3",
-    "expo-build-properties": "~0.13.2",
-    "expo-camera": "~16.0.18",
-    "expo-dev-client": "~5.0.14",
+    "expo-blur": "~14.1.4",
+    "expo-build-properties": "~0.14.6",
+    "expo-camera": "~16.1.6",
+    "expo-dev-client": "~5.1.8",
     "expo-font": "^13.0.4",
-    "expo-linear-gradient": "~14.0.2",
-    "expo-splash-screen": "^0.29.22",
-    "expo-status-bar": "~2.0.1",
+    "expo-linear-gradient": "~14.1.4",
+    "expo-splash-screen": "~0.30.8",
+    "expo-status-bar": "~2.2.3",
     "formik": "^2.4.6",
     "moti": "^0.30.0",
-    "react": "18.3.1",
-    "react-native": "0.76.7",
     "react-native-animatable": "^1.4.0",
     "react-native-draggable-flatlist": "^4.0.1",
-    "react-native-gesture-handler": "~2.20.2",
-    "react-native-maps": "^1.22.6",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-maps": "1.20.1",
     "react-native-paper": "^5.13.1",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "^5.3.0",
-    "react-native-screens": "~4.4.0",
-    "yup": "^1.6.1"
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.10.0",
+    "react-native-ui-datepicker": "^3.1.2",
+    "yup": "^1.6.1",
+    "dayjs": "^1.11.10",
+    "jalaliday": "^1.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@expo/metro-config": "^0.19.12",
+    "@expo/metro-config": "~0.20.0",
     "@types/lodash": "^4.17.16",
-    "@types/react": "~18.3.12",
-    "typescript": "^5.8.2"
-  },
-  "private": true
+    "@types/react": "~19.0.10",
+    "typescript": "~5.8.3"
+  }
 }
