--- a/app.json
+++ b/app.json
@@ -14,7 +14,10 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "infoPlist": {
+        "NSContactsUsageDescription": "این برنامه برای نمایش نام مخاطبین در لیست تماس‌ها به مخاطبین شما نیاز دارد."
+      }
     },
     "android": {
       "package": "com.aratile",
@@ -24,6 +27,13 @@
         "backgroundColor": "#ffffff"
       },
       "permissions": [
+        "READ_CALL_LOG",
+        "READ_CONTACTS",
+        "READ_PHONE_STATE",
+        "android.permission.READ_CONTACTS",
+        "android.permission.READ_CALL_LOG",
+        "android.permission.READ_PHONE_STATE",
+        "android.permission.READ_PHONE_NUMBERS",
         "android.permission.CAMERA",
         "android.permission.INTERNET",
         "android.permission.ACCESS_NETWORK_STATE"
@@ -38,8 +48,23 @@
         "expo-build-properties",
         {
           "android": {
-            "usesCleartextTraffic": true
+            "usesCleartextTraffic": true,
+            "permissions": [
+              "READ_CALL_LOG",
+              "READ_CONTACTS",
+              "READ_PHONE_STATE",
+              "android.permission.READ_CONTACTS",
+              "android.permission.READ_CALL_LOG",
+              "android.permission.READ_PHONE_STATE",
+              "android.permission.READ_PHONE_NUMBERS"
+            ]
           }
+        }
+      ],
+      [
+        "expo-contacts",
+        {
+          "contactsPermission": "این برنامه برای نمایش نام مخاطبین در لیست تماس‌ها به مخاطبین شما نیاز دارد."
         }
       ]
     ],
