--- a/package.json
+++ b/package.json
@@ -11,39 +11,49 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~53.0.0",
-    "react": "19.0.0",
-    "react-native": "0.79.2",
     "@react-native-async-storage/async-storage": "~2.1.1",
     "@react-native-picker/picker": "2.11.0",
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/native-stack": "^7.2.1",
     "@react-navigation/stack": "^7.1.2",
     "axios": "^1.8.4",
+    "dayjs": "^1.11.10",
+    "expo": "~53.0.0",
     "expo-av": "~15.1.4",
     "expo-barcode-scanner": "^13.0.1",
     "expo-blur": "~14.1.4",
     "expo-build-properties": "~0.14.6",
+    "expo-calendar": "~14.1.4",
     "expo-camera": "~16.1.6",
+    "expo-contacts": "~14.2.3",
     "expo-dev-client": "~5.1.8",
+    "expo-file-system": "~18.1.9",
     "expo-font": "^13.0.4",
+    "expo-intent-launcher": "~12.1.4",
     "expo-linear-gradient": "~14.1.4",
+    "expo-permissions": "^14.4.0",
+    "expo-sharing": "~13.1.5",
     "expo-splash-screen": "~0.30.8",
     "expo-status-bar": "~2.2.3",
     "formik": "^2.4.6",
+    "jalaliday": "^1.1.1",
+    "moment-jalaali": "^0.9.4",
     "moti": "^0.30.0",
+    "react": "19.0.0",
+    "react-native": "0.79.2",
     "react-native-animatable": "^1.4.0",
+    "react-native-call-log": "^2.1.2",
     "react-native-draggable-flatlist": "^4.0.1",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-maps": "1.20.1",
     "react-native-paper": "^5.13.1",
     "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "5.4.0",
+    "react-native-safe-area-context": "^4.14.1",
     "react-native-screens": "~4.10.0",
     "react-native-ui-datepicker": "^3.1.2",
-    "yup": "^1.6.1",
-    "dayjs": "^1.11.10",
-    "jalaliday": "^1.1.1"
+    "react-native-vector-icons": "^9.2.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
