--- a/package.json
+++ b/package.json
@@ -11,15 +11,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~53.0.0",
-    "react": "19.0.0",
-    "react-native": "0.79.2",
     "@react-native-async-storage/async-storage": "~2.1.1",
     "@react-native-picker/picker": "2.11.0",
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/native-stack": "^7.2.1",
     "@react-navigation/stack": "^7.1.2",
     "axios": "^1.8.4",
+    "dayjs": "^1.11.10",
+    "expo": "~53.0.0",
     "expo-av": "~15.1.4",
     "expo-barcode-scanner": "^13.0.1",
     "expo-blur": "~14.1.4",
@@ -31,7 +30,10 @@
     "expo-splash-screen": "~0.30.8",
     "expo-status-bar": "~2.2.3",
     "formik": "^2.4.6",
+    "jalaliday": "^1.1.1",
     "moti": "^0.30.0",
+    "react": "19.0.0",
+    "react-native": "0.79.2",
     "react-native-animatable": "^1.4.0",
     "react-native-draggable-flatlist": "^4.0.1",
     "react-native-gesture-handler": "~2.24.0",
@@ -42,8 +44,7 @@
     "react-native-screens": "~4.10.0",
     "react-native-ui-datepicker": "^3.1.2",
     "yup": "^1.6.1",
-    "dayjs": "^1.11.10",
-    "jalaliday": "^1.1.1"
+    "expo-file-system": "~18.1.9"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
