--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "expo-build-properties": "~0.14.6",
     "expo-calendar": "~14.1.4",
     "expo-camera": "~16.1.6",
-    "expo-contacts": "~14.2.3",
     "expo-dev-client": "~5.1.8",
     "expo-file-system": "~18.1.9",
     "expo-font": "^13.0.4",
@@ -52,8 +51,7 @@
     "react-native-safe-area-context": "^4.14.1",
     "react-native-screens": "~4.10.0",
     "react-native-ui-datepicker": "^3.1.2",
-    "yup": "^1.6.1",
-    "expo-file-system": "~18.1.9"
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
