--- a/eas.json
+++ b/eas.json
@@ -5,15 +5,6 @@
   },
   "build": {
     "development": {
-      "developmentClient": true,
-      "distribution": "internal"
-    },
-    "release": {
-      "android": {
-        "buildType": "apk"
-      }
-    },
-    "preview": {
       "distribution": "internal"
     },
     "production": {
@@ -21,6 +12,12 @@
       "android": {
         "buildType": "apk"
       }
+    },
+    "release": {
+      "android": {
+        "buildType": "apk"
+      },
+      "distribution": "store"
     }
   },
   "submit": {
