--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "aratile",
   "version": "1.0.0",
@@ -21,7 +20,6 @@
     "dayjs": "^1.11.10",
     "expo": "~53.0.0",
     "expo-av": "~15.1.4",
-    "expo-barcode-scanner": "^13.0.1",
     "expo-blur": "~14.1.4",
     "expo-build-properties": "~0.14.6",
     "expo-calendar": "~14.1.4",
@@ -31,7 +29,6 @@
     "expo-font": "^13.0.4",
     "expo-intent-launcher": "~12.1.4",
     "expo-linear-gradient": "~14.1.4",
-    "expo-permissions": "^14.4.0",
     "expo-sharing": "~13.1.5",
     "expo-splash-screen": "~0.30.8",
     "expo-status-bar": "~2.2.3",
@@ -40,6 +37,7 @@
     "moment-jalaali": "^0.9.4",
     "moti": "^0.30.0",
     "react": "19.0.0",
+    "react-dom": "^19.0.0",
     "react-native": "0.79.2",
     "react-native-animatable": "^1.4.0",
     "react-native-call-log": "^2.1.2",
@@ -59,5 +57,13 @@
     "@types/lodash": "^4.17.16",
     "@types/react": "~19.0.10",
     "typescript": "~5.8.3"
+  },
+  "expo": {
+  "doctor": {
+    "reactNativeDirectoryCheck": {
+      "exclude": ["react-native-fs", "jalaliday", "moment-jalaali", "react-native-call-log"],
+      "listUnknownPackages": false
+    }
   }
+}
 }
