--- a/eas.json
+++ b/eas.json
@@ -5,19 +5,39 @@
   },
   "build": {
     "development": {
-      "distribution": "internal"
+      "developmentClient": true,
+      "distribution": "internal",
+      "android": {
+        "gradleCommand": ":app:assembleDebug",
+        "buildType": "apk"
+      },
+      "env": {
+        "ENABLE_HERMES": "false",
+        "NODE_ENV": "development"
+      },
+      "channel": "development"
+    },
+    "development-simulator": {
+      "developmentClient": true,
+      "distribution": "internal",
+      "ios": {
+        "simulator": true
+      },
+      "channel": "development"
     },
     "production": {
       "autoIncrement": true,
       "android": {
         "buildType": "apk"
-      }
+      },
+      "channel": "production"
     },
     "release": {
       "android": {
         "buildType": "apk"
       },
-      "distribution": "store"
+      "distribution": "store",
+      "channel": "release"
     }
   },
   "submit": {
