--- a/package.json
+++ b/package.json
@@ -17,12 +17,10 @@
     "@react-navigation/native-stack": "^7.2.1",
     "@react-navigation/stack": "^7.1.2",
     "axios": "^1.8.4",
-    "dayjs": "^1.11.10",
     "expo": "~53.0.0",
-    "expo-av": "~15.1.4",
+    "expo-av": "^15.1.4",
     "expo-blur": "~14.1.4",
     "expo-build-properties": "~0.14.6",
-    "expo-calendar": "~14.1.4",
     "expo-camera": "~16.1.6",
     "expo-dev-client": "~5.1.8",
     "expo-file-system": "~18.1.9",
@@ -33,23 +31,15 @@
     "expo-splash-screen": "~0.30.8",
     "expo-status-bar": "~2.2.3",
     "formik": "^2.4.6",
-    "jalaliday": "^1.1.1",
-    "moment-jalaali": "^0.9.4",
-    "moti": "^0.30.0",
     "react": "19.0.0",
     "react-dom": "^19.0.0",
     "react-native": "0.79.2",
-    "react-native-animatable": "^1.4.0",
-    "react-native-call-log": "^2.1.2",
     "react-native-draggable-flatlist": "^4.0.1",
-    "react-native-fs": "^2.20.0",
-    "react-native-gesture-handler": "~2.24.0",
-    "react-native-maps": "1.20.1",
+    "react-native-gesture-handler": "^2.25.0",
     "react-native-paper": "^5.13.1",
-    "react-native-reanimated": "~3.17.4",
-    "react-native-screens": "~4.10.0",
-    "react-native-ui-datepicker": "^3.1.2",
-    "yup": "^1.6.1"
+    "react-native-reanimated": "~3.5.0",
+    "yup": "^1.6.1",
+    "expo-updates": "~0.28.13"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -59,11 +49,10 @@
     "typescript": "~5.8.3"
   },
   "expo": {
-  "doctor": {
-    "reactNativeDirectoryCheck": {
-      "exclude": ["react-native-fs", "jalaliday", "moment-jalaali", "react-native-call-log"],
-      "listUnknownPackages": false
+    "doctor": {
+      "reactNativeDirectoryCheck": {
+        "listUnknownPackages": false
+      }
     }
   }
-}
 }
