--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native-stack": "^7.2.1",
     "@react-navigation/stack": "^7.1.2",
     "axios": "^1.8.4",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.10",
     "expo": "~53.0.0",
     "expo-av": "~15.1.4",
@@ -59,11 +60,16 @@
     "typescript": "~5.8.3"
   },
   "expo": {
-  "doctor": {
-    "reactNativeDirectoryCheck": {
-      "exclude": ["react-native-fs", "jalaliday", "moment-jalaali", "react-native-call-log"],
-      "listUnknownPackages": false
+    "doctor": {
+      "reactNativeDirectoryCheck": {
+        "exclude": [
+          "react-native-fs",
+          "jalaliday",
+          "moment-jalaali",
+          "react-native-call-log"
+        ],
+        "listUnknownPackages": false
+      }
     }
   }
-}
 }
