--- a/package.json
+++ b/package.json
@@ -1,64 +1,44 @@
 {
-  "name": "aratile",
+  "name": "test-app",
   "version": "1.0.0",
-  "license": "0BSD",
   "main": "index.ts",
-  "private": true,
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "~2.1.1",
-    "@react-native-picker/picker": "2.11.0",
-    "@react-navigation/native": "^7.0.15",
-    "@react-navigation/native-stack": "^7.2.1",
-    "@react-navigation/stack": "^7.1.2",
-    "axios": "^1.8.4",
-    "date-fns": "^4.1.0",
-    "dayjs": "^1.11.10",
-    "expo": "~53.0.0",
+    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-navigation/native": "^7.1.9",
+    "@react-navigation/native-stack": "^7.3.13",
+    "@react-navigation/stack": "^7.3.2",
+    "axios": "^1.9.0",
+    "expo": "~53.0.9",
     "expo-av": "^15.1.4",
-    "expo-blur": "~14.1.4",
+    "expo-barcode-scanner": "^13.0.1",
+    "expo-blur": "^14.1.4",
     "expo-build-properties": "~0.14.6",
-    "expo-camera": "~16.1.6",
+    "expo-camera": "^16.1.6",
     "expo-dev-client": "~5.1.8",
-    "expo-file-system": "~18.1.9",
-    "expo-font": "^13.0.4",
-    "expo-intent-launcher": "~12.1.4",
-    "expo-linear-gradient": "~14.1.4",
-    "expo-sharing": "~13.1.5",
-    "expo-splash-screen": "~0.30.8",
+    "expo-file-system": "^18.1.10",
+    "expo-font": "^13.3.1",
+    "expo-linear-gradient": "^14.1.4",
+    "expo-splash-screen": "^0.30.8",
     "expo-status-bar": "~2.2.3",
-    "expo-updates": "~0.28.13",
     "formik": "^2.4.6",
     "react": "19.0.0",
-    "react-dom": "^19.0.0",
     "react-native": "0.79.2",
-    "react-native-gesture-handler": "^2.25.0",
-    "react-native-paper": "^5.13.1",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-paper": "^5.14.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.10.0",
     "yup": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@expo/metro-config": "~0.20.0",
-    "@types/lodash": "^4.17.16",
     "@types/react": "~19.0.10",
     "typescript": "~5.8.3"
   },
-  "expo": {
-    "doctor": {
-      "reactNativeDirectoryCheck": {
-        "exclude": [
-          "react-native-fs",
-          "jalaliday",
-          "moment-jalaali",
-          "react-native-call-log"
-        ],
-        "listUnknownPackages": false
-      }
-    }
-  }
+  "private": true
 }
