--- a/package.json
+++ b/package.json
@@ -31,7 +31,10 @@
     "react-native-paper": "^5.14.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
-    "yup": "^1.6.1"
+    "yup": "^1.6.1",
+    "expo-intent-launcher": "~12.0.2",
+    "expo-updates": "~0.28.13",
+    "expo-camera": "~16.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
