--- a/package.json
+++ b/package.json
@@ -24,10 +24,11 @@
     "expo-font": "^13.3.1",
     "expo-intent-launcher": "~12.0.2",
     "expo-linear-gradient": "^14.1.4",
-    "expo-splash-screen": "^0.30.8",
+    "expo-splash-screen": "~0.30.8",
     "expo-status-bar": "~2.2.3",
     "expo-updates": "~0.28.13",
     "formik": "^2.4.6",
+    "install": "^0.13.0",
     "react": "19.0.0",
     "react-native": "0.79.2",
     "react-native-gesture-handler": "~2.24.0",
